src/SharpShader/Shaderlab/Frontend/Generated/ShaderLabParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Source/Graphics/SharpShader/Shaderlab/Frontend/Grammar/ShaderLab.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace SharpShader.ShaderLab.Frontend.Generated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class ShaderLabParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHADER=1, PROPERTIES=2, TAGS=3, PASS=4, STENCIL=5, HLSLPROGRAM=6, ENDHLSL=7, 
		CATEGORY=8, HLSL_PLACEHOLDER=9, IDENTIFIER=10, NUMBER=11, STRING=12, LBRACE=13, 
		RBRACE=14, LPAREN=15, RPAREN=16, LBRACKET=17, RBRACKET=18, COMMA=19, EQUAL=20, 
		DOT=21, COLON=22, PLUS=23, MINUS=24, LINE_COMMENT=25, BLOCK_COMMENT=26, 
		WS=27;
	public const int
		RULE_shaderFile = 0, RULE_shaderDecl = 1, RULE_shaderBody = 2, RULE_propertiesSection = 3, 
		RULE_shaderTagsSection = 4, RULE_passSection = 5, RULE_passBlock = 6, 
		RULE_passElement = 7, RULE_passTagsSection = 8, RULE_stencilSection = 9, 
		RULE_hlslProgramSection = 10, RULE_stateStatement = 11, RULE_stateToken = 12, 
		RULE_tagsBlock = 13, RULE_tagPair = 14, RULE_genericBlock = 15, RULE_genericBlockElement = 16;
	public static readonly string[] ruleNames = {
		"shaderFile", "shaderDecl", "shaderBody", "propertiesSection", "shaderTagsSection", 
		"passSection", "passBlock", "passElement", "passTagsSection", "stencilSection", 
		"hlslProgramSection", "stateStatement", "stateToken", "tagsBlock", "tagPair", 
		"genericBlock", "genericBlockElement"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "'='", "'.'", "':'", 
		"'+'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHADER", "PROPERTIES", "TAGS", "PASS", "STENCIL", "HLSLPROGRAM", 
		"ENDHLSL", "CATEGORY", "HLSL_PLACEHOLDER", "IDENTIFIER", "NUMBER", "STRING", 
		"LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", 
		"EQUAL", "DOT", "COLON", "PLUS", "MINUS", "LINE_COMMENT", "BLOCK_COMMENT", 
		"WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ShaderLab.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ShaderLabParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ShaderLabParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ShaderLabParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShaderFileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShaderDeclContext shaderDecl() {
			return GetRuleContext<ShaderDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ShaderLabParser.Eof, 0); }
		public ShaderFileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderFile; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderFileContext shaderFile() {
		ShaderFileContext _localctx = new ShaderFileContext(Context, State);
		EnterRule(_localctx, 0, RULE_shaderFile);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			shaderDecl();
			State = 35;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHADER() { return GetToken(ShaderLabParser.SHADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ShaderLabParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ShaderLabParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShaderBodyContext shaderBody() {
			return GetRuleContext<ShaderBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ShaderLabParser.RBRACE, 0); }
		public ShaderDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderDeclContext shaderDecl() {
		ShaderDeclContext _localctx = new ShaderDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_shaderDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			Match(SHADER);
			State = 38;
			Match(STRING);
			State = 39;
			Match(LBRACE);
			State = 40;
			shaderBody();
			State = 41;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PropertiesSectionContext propertiesSection() {
			return GetRuleContext<PropertiesSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShaderTagsSectionContext shaderTagsSection() {
			return GetRuleContext<ShaderTagsSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassSectionContext[] passSection() {
			return GetRuleContexts<PassSectionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassSectionContext passSection(int i) {
			return GetRuleContext<PassSectionContext>(i);
		}
		public ShaderBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderBodyContext shaderBody() {
		ShaderBodyContext _localctx = new ShaderBodyContext(Context, State);
		EnterRule(_localctx, 4, RULE_shaderBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PROPERTIES) {
				{
				State = 43;
				propertiesSection();
				}
			}

			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==TAGS) {
				{
				State = 46;
				shaderTagsSection();
				}
			}

			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PASS) {
				{
				{
				State = 49;
				passSection();
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PropertiesSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROPERTIES() { return GetToken(ShaderLabParser.PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GenericBlockContext genericBlock() {
			return GetRuleContext<GenericBlockContext>(0);
		}
		public PropertiesSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_propertiesSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropertiesSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropertiesSectionContext propertiesSection() {
		PropertiesSectionContext _localctx = new PropertiesSectionContext(Context, State);
		EnterRule(_localctx, 6, RULE_propertiesSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(PROPERTIES);
			State = 56;
			genericBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShaderTagsSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAGS() { return GetToken(ShaderLabParser.TAGS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TagsBlockContext tagsBlock() {
			return GetRuleContext<TagsBlockContext>(0);
		}
		public ShaderTagsSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shaderTagsSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShaderTagsSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShaderTagsSectionContext shaderTagsSection() {
		ShaderTagsSectionContext _localctx = new ShaderTagsSectionContext(Context, State);
		EnterRule(_localctx, 8, RULE_shaderTagsSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			Match(TAGS);
			State = 59;
			tagsBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PASS() { return GetToken(ShaderLabParser.PASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PassBlockContext passBlock() {
			return GetRuleContext<PassBlockContext>(0);
		}
		public PassSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassSectionContext passSection() {
		PassSectionContext _localctx = new PassSectionContext(Context, State);
		EnterRule(_localctx, 10, RULE_passSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61;
			Match(PASS);
			State = 62;
			passBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ShaderLabParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ShaderLabParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PassElementContext[] passElement() {
			return GetRuleContexts<PassElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PassElementContext passElement(int i) {
			return GetRuleContext<PassElementContext>(i);
		}
		public PassBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassBlockContext passBlock() {
		PassBlockContext _localctx = new PassBlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_passBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(LBRACE);
			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SHADER) | (1L << PROPERTIES) | (1L << TAGS) | (1L << PASS) | (1L << STENCIL) | (1L << HLSLPROGRAM) | (1L << ENDHLSL) | (1L << CATEGORY) | (1L << IDENTIFIER) | (1L << NUMBER) | (1L << STRING) | (1L << LPAREN) | (1L << RPAREN) | (1L << LBRACKET) | (1L << RBRACKET) | (1L << COMMA) | (1L << EQUAL) | (1L << DOT) | (1L << COLON) | (1L << PLUS) | (1L << MINUS))) != 0)) {
				{
				{
				State = 65;
				passElement();
				}
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 71;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PassTagsSectionContext passTagsSection() {
			return GetRuleContext<PassTagsSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StencilSectionContext stencilSection() {
			return GetRuleContext<StencilSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HlslProgramSectionContext hlslProgramSection() {
			return GetRuleContext<HlslProgramSectionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateStatementContext stateStatement() {
			return GetRuleContext<StateStatementContext>(0);
		}
		public PassElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassElementContext passElement() {
		PassElementContext _localctx = new PassElementContext(Context, State);
		EnterRule(_localctx, 14, RULE_passElement);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 73;
				passTagsSection();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74;
				stencilSection();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 75;
				hlslProgramSection();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 76;
				stateStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PassTagsSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAGS() { return GetToken(ShaderLabParser.TAGS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TagsBlockContext tagsBlock() {
			return GetRuleContext<TagsBlockContext>(0);
		}
		public PassTagsSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_passTagsSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPassTagsSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PassTagsSectionContext passTagsSection() {
		PassTagsSectionContext _localctx = new PassTagsSectionContext(Context, State);
		EnterRule(_localctx, 16, RULE_passTagsSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(TAGS);
			State = 80;
			tagsBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StencilSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STENCIL() { return GetToken(ShaderLabParser.STENCIL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GenericBlockContext genericBlock() {
			return GetRuleContext<GenericBlockContext>(0);
		}
		public StencilSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stencilSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStencilSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StencilSectionContext stencilSection() {
		StencilSectionContext _localctx = new StencilSectionContext(Context, State);
		EnterRule(_localctx, 18, RULE_stencilSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(STENCIL);
			State = 83;
			genericBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HlslProgramSectionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HLSLPROGRAM() { return GetToken(ShaderLabParser.HLSLPROGRAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HLSL_PLACEHOLDER() { return GetToken(ShaderLabParser.HLSL_PLACEHOLDER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDHLSL() { return GetToken(ShaderLabParser.ENDHLSL, 0); }
		public HlslProgramSectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hlslProgramSection; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHlslProgramSection(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HlslProgramSectionContext hlslProgramSection() {
		HlslProgramSectionContext _localctx = new HlslProgramSectionContext(Context, State);
		EnterRule(_localctx, 20, RULE_hlslProgramSection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			Match(HLSLPROGRAM);
			State = 86;
			Match(HLSL_PLACEHOLDER);
			State = 87;
			Match(ENDHLSL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StateTokenContext[] stateToken() {
			return GetRuleContexts<StateTokenContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StateTokenContext stateToken(int i) {
			return GetRuleContext<StateTokenContext>(i);
		}
		public StateStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StateStatementContext stateStatement() {
		StateStatementContext _localctx = new StateStatementContext(Context, State);
		EnterRule(_localctx, 22, RULE_stateStatement);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 89;
					stateToken();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 92;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StateTokenContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SHADER() { return GetToken(ShaderLabParser.SHADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PROPERTIES() { return GetToken(ShaderLabParser.PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TAGS() { return GetToken(ShaderLabParser.TAGS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PASS() { return GetToken(ShaderLabParser.PASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STENCIL() { return GetToken(ShaderLabParser.STENCIL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HLSLPROGRAM() { return GetToken(ShaderLabParser.HLSLPROGRAM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENDHLSL() { return GetToken(ShaderLabParser.ENDHLSL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CATEGORY() { return GetToken(ShaderLabParser.CATEGORY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(ShaderLabParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(ShaderLabParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(ShaderLabParser.NUMBER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(ShaderLabParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(ShaderLabParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(ShaderLabParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(ShaderLabParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA() { return GetToken(ShaderLabParser.COMMA, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUAL() { return GetToken(ShaderLabParser.EQUAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(ShaderLabParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(ShaderLabParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS() { return GetToken(ShaderLabParser.PLUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS() { return GetToken(ShaderLabParser.MINUS, 0); }
		public StateTokenContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stateToken; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IShaderLabVisitor<TResult> typedVisitor = visitor as IShaderLabVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStateToken(this);
			else return visitor.VisitChildren(this);
		}
	}
